fix Remove this 'public' modifier.